# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
labels/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py
labels/templates/labels/: 280924new_label.html  create_label.html  del_label.html  edit_label.html  labels.html  new_label.html
labels/tests/: test_delete_labels.py  test_edit_labels.py  test_new_labels.py
statuses/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create_status.html  del_status.html  edit_status.html  new_status.html  statuses.html
statuses/tests/: test_delete_status.py  test_edit_status.py  test_new_status.py
task_manager/: __init__.py  permissions.py  settings.py  urls.py  views.py
task_manager/templates/: index.html
tasks/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_initial.py
tasks/tests/: test_delete_task.py  test_edit_task.py  test_info_task.py  test_new_task.py  test_taskfilter.py
users/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_first_name_and_more.py
users/tests/: test_delete_user.py  test_edit_user.py  test_login_logout.py  test_reg_user.py
(+27 files in other folders)
